Attempt to fix 404 and missing background on all account pages

--- a/assets/css/components/Accounts.scss
+++ b/assets/css/components/Accounts.scss
@@ -1,16 +1,16 @@
 /* ---- Login ---- */
 
-.login-fullscreen-container {
+.account-fullscreen-container {
   height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
   background-image: radial-gradient(#31D9ED 25%, #068CB9); /*fallback*/
-  background-image: url("/static/images/signin-icons-bgd.png"), radial-gradient(#31D9ED 25%, #068CB9);
+  background-image: url("/static/images/account-icons-bgd.png"), radial-gradient(#31D9ED 25%, #068CB9);
   background-size: 100% auto;
 
 
-  .login-bigbrand {
+  .account-bigbrand {
     display: flex;
     align-items: center;
     margin-bottom: -1rem;
@@ -26,7 +26,7 @@
     }
   }
 
-  .login-card {
+  .account-card {
     background: rgba(250,250,250,0.3);
     height: auto;
     width: 40rem;
@@ -110,16 +110,26 @@
         margin-top: 3rem;
       }
     }
+
+    //404 , 403
+    .error-number {
+      @extend .font404;
+      text-align:center;
+      margin-top: .5rem;
+      margin-bottom: 1rem;
+      color:$white;
+
+      .action-button {
+        height: 4rem;
+      }
+    }
+
+    fieldset {
+      display: flex;
+      align-items: center;
+    }
   }
 
-  .action-button {
-    height: 4rem;
-  }
-
-  fieldset {
-    display: flex;
-    align-items: center;
-  }
 
   .sign-in {
     @extend .title-1;
@@ -196,7 +206,7 @@ body.accounts {
 
 
 
-.login-card :-webkit-input-placeholder {
+.account-card :-webkit-input-placeholder {
   color: #ccc
 }
 
@@ -224,15 +234,15 @@ body.accounts {
   background-color: pink;
 }
 
-.login-fullscreen-container .t-white{
+.account-fullscreen-container .t-white{
   white-space: normal;
 }
 
-.login-fullscreen-container .title-1 {
+.account-fullscreen-container .title-1 {
   line-height: 3.5rem;
 }
 
 
-.login-fullscreen-container .title-2 {
+.account-fullscreen-container .title-2 {
   line-height: normal;
 }
